# pr-tracker

./: Cargo.toml  README.md  config.toml.template
src/: config.rs  lib.rs  main.rs  model.rs
src/fetch/: api.rs  gh.rs  mod.rs
src/ui/: app.rs
tests/: fallback.rs  gh_parser.rs
